[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-content-extractor"
version = "0.1.0"
description = "CLI tool to extract Instagram and YouTube Shorts metadata, media, and OCR text"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "instaloader>=4.15",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.0",
    "rich>=14.3.3",
    "sarvamai",
    "yt-dlp>=2025.1.15",
]

[project.scripts]
social-content-extractor = "social_content_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
